# web_scrapper

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  index.yaml
.cargo/: config
.deploy/helm/: Chart.yaml  create_db.js  values.yaml
.deploy/helm/templates/: deployment.yaml  init_db_cm.yaml
.github/workflows/: docker_build_push.yml  lint_test_build_deploy.yml  release.yaml  rust_build_test.yml
.github/workflows/ansible/: ansible_deploy.yml  deploy.yml
charts/web-scraper/: Chart.yaml  values.yaml
src/: db.rs  helpers.rs  main.rs
src/config/: black_words.txt  kw.txt  urls.txt
src/types/: error.rs
