[package]
name = "web_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
mobot = "0.3.10"
tokio = "1.33.0"
scraper = "0.18"
headless_chrome = "1.0.7"
env_logger = "0.10"
log = { version = "0.4.20", features = ["release_max_level_info"] }
article_scraper = "2.0.0"
url = "2.4.1"
reqwest = "0.11.22"
regex = "1.10.2"
dotenv = "0.15.0"
serde = "1.0.192"
mongodb = "2.7.1"
bson = "2.7.0"
openssl-sys = "0.9.98"
openssl = { version = "0.10.62", features = ["vendored"] }
